@@ -9,6 +9,7 @@ New features:
 ...G...... [ZBXNEXT-1528] added net.if.in, net.if.out and net.if.total item support on HP-UX platforms (igors)
 
 Bug fixes:
+..F....... [ZBX-6863] fixed severity buttonset colors displaing (Eduard)
 A......... [ZBX-6386] fixed discovered fields update validation in items, triggers and graphs (Eduard)
 A.F.I..... [ZBX-6020] fixed displaying MySQL errors for PHP 5.5.0 and newer; thanks to Michel Meyers (Ivo)
 .......PS. [ZBX-6746] fixed tamplate linking to proxy if the agent with the same name is auto-registered (igors)
